--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,6 @@ BuildingEscape/Content/StarterContent/
 ######################
 # VS Generated Files #
 ######################
-*.VC.db
+*.VC.db*
+*.opendb
+*.ipch
